# ai-genre-pipeline

./: .dockerignore  .env.country-trance.example  .env.cyberpunk.example  .env.example  .env.scripture.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.md  verses.example.txt
app/: __init__.py  comfyui_client.py  config.py  logging_config.py  main.py  models.py  orchestrator.py  prompts.py  state.py  utils.py
app/assembly/: __init__.py  ffmpeg_assembler.py
app/image/: __init__.py  base.py  comfyui.py  factory.py  openai_compat_image.py  openai_image.py  xai_image.py
app/llm/: __init__.py  base.py  claude.py  factory.py  openai_compat.py
app/music/: __init__.py  base.py  factory.py  local.py  prompt_only.py  suno_thirdparty.py
app/streaming/: __init__.py  base.py  broadcaster.py  manager.py
app/video/: __init__.py  base.py  comfyui.py  factory.py  kling.py  runway.py
scripts/: batch-finish.sh  batch-generate.sh
