[project]
name = "ai-genre-pipeline"
version = "0.1.0"
description = "Config-driven pipeline that turns a .env genre definition into AI songs + cohesive music videos with consistent characters."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ai-genre-pipeline" }]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "jinja2>=3.1.4",
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.34.0"]
openai = ["openai>=1.40.0"]
all = ["anthropic>=0.34.0", "openai>=1.40.0"]

[project.scripts]
# `agp` is the console entrypoint -> app.main:app (Typer)
agp = "app.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
